--- a/src/main/resources/xiaov.properties
+++ b/src/main/resources/xiaov.properties
@@ -16,7 +16,7 @@
 
 #
 # Description: XiaoV configurations. 
-# Version: 1.4.0.4, Aug 8, 2016
+# Version: 1.4.0.5, Nov 23, 2017
 # Author: Liang Ding
 #
 
@@ -31,19 +31,18 @@ itpk.secret=vkq6b8qjot7j
 
 # 1: Turing Bot, 2: Baidu Bot, 3: ITPK Bot
 qq.bot.type=1
-qq.bot.name=\u5c0f\u8587
+qq.bot.name=\u5C0F\u8587
 qq.bot.key=123456
 qq.bot.pushGroups=*
-#qq.bot.pushGroups=Java\u5f00\u6e90B3log,QQ Bot \u6d4b\u8bd5,node.js,Java \u5f00\u6e90\u535a\u5ba2 Solo
+#qq.bot.pushGroups=Java\u5F00\u6E90B3log,QQ Bot \u6D4B\u8BD5,node.js,Java \u5F00\u6E90\u535A\u5BA2 Solo
 qq.bot.pushGroupUserCnt=2
-qq.bot.ack=false
 
-bot.follow.keywords=\u4e0d\u76d1\u542c\u4efb\u4f55\u5173\u952e\u5b57
-bot.follow.keywordAnswer=\u8fd9\u91cc\u53ef\u80fd\u6709\u8be5\u95ee\u9898\u7684\u7b54\u6848\uff1ahttps://hacpai.com/search?key={keyword}
+bot.follow.keywords=\u4E0D\u76D1\u542C\u4EFB\u4F55\u5173\u952E\u5B57
+bot.follow.keywordAnswer=\u8FD9\u91CC\u53EF\u80FD\u6709\u8BE5\u95EE\u9898\u7684\u7B54\u6848\uFF1Ahttps://hacpai.com/search?key={keyword}
 
 forum.api=https://hacpai.com/community/push
 forum.key=dev_key
 
-ads=\u6211\u7ecf\u5e38\u53bb\u4e00\u4e2a\u53eb\u3010\u9ed1\u5ba2\u6d3e\u3011\u7684\u8bba\u575b\uff0c\u90a3\u91cc\u805a\u96c6\u4e86\u5f88\u591a\u4f18\u79c0\u7684\u7a0b\u5e8f\u5458\u548c\u8bbe\u8ba1\u5e08\
-#\u6765\u8bba\u575b\u770b\u770b\u65b0\u5e16\u5427 https://hacpai.com\
-#\u6211\u662f\u5f00\u6e90\u7684\uff0c\u6b22\u8fce\u5927\u5bb6\u81ea\u5efa\u79c1\u670d https://github.com/b3log/xiaov
+ads=\u6211\u7ECF\u5E38\u53BB\u4E00\u4E2A\u53EB\u3010\u9ED1\u5BA2\u6D3E\u3011\u7684\u8BBA\u575B\uFF0C\u90A3\u91CC\u805A\u96C6\u4E86\u5F88\u591A\u4F18\u79C0\u7684\u7A0B\u5E8F\u5458\u548C\u8BBE\u8BA1\u5E08\
+#\u6765\u8BBA\u575B\u770B\u770B\u65B0\u5E16\u5427 https://hacpai.com\
+#\u6211\u662F\u5F00\u6E90\u7684\uFF0C\u6B22\u8FCE\u5927\u5BB6\u81EA\u5EFA\u79C1\u670D https://github.com/b3log/xiaov
