--- a/src/main/resources/xiaov.properties
+++ b/src/main/resources/xiaov.properties
@@ -16,7 +16,7 @@
 
 #
 # Description: XiaoV configurations. 
-# Version: 1.4.0.5, Nov 23, 2017
+# Version: 1.4.0.6, Jul 17, 2018
 # Author: Liang Ding
 #
 
@@ -40,8 +40,9 @@ qq.bot.pushGroupUserCnt=2
 bot.follow.keywords=\u4E0D\u76D1\u542C\u4EFB\u4F55\u5173\u952E\u5B57
 bot.follow.keywordAnswer=\u8FD9\u91CC\u53EF\u80FD\u6709\u8BE5\u95EE\u9898\u7684\u7B54\u6848\uFF1Ahttps://hacpai.com/search?key={keyword}
 
-third.api=https://hacpai.com/community/push
-third.key=dev_key
+# \u5916\u90E8\u7CFB\u7EDF\u63A8\u9001\u63A5\u53E3
+third.api=
+third.key=
 
 ads=\u6211\u7ECF\u5E38\u53BB\u4E00\u4E2A\u53EB\u3010\u9ED1\u5BA2\u6D3E\u3011\u7684\u8BBA\u575B\uFF0C\u90A3\u91CC\u805A\u96C6\u4E86\u5F88\u591A\u4F18\u79C0\u7684\u7A0B\u5E8F\u5458\u548C\u8BBE\u8BA1\u5E08\
 #\u6765\u8BBA\u575B\u770B\u770B\u65B0\u5E16\u5427 https://hacpai.com\
