--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <!-- Properties -->
     <properties>
-        <latke.version>2.4.3</latke.version>
+        <latke.version>2.4.21</latke.version>
         <servlet.version>3.1.0</servlet.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <slf4j.version>1.7.7</slf4j.version>
@@ -35,7 +35,7 @@
 
     <organization>
         <name>B3log</name>
-        <url>http://b3log.org</url>
+        <url>https://b3log.org</url>
     </organization>
 
     <licenses>
@@ -131,6 +131,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jodd</groupId>
+            <artifactId>jodd-http</artifactId>
+            <version>5.0.5</version>
         </dependency>
 
     </dependencies>
